# ray_tracing_tutorial

./: .gitignore  .gitmodules  LICENSE  README.md
articles/chapter 0/: 光线追踪——从入门到放弃(0)：序.md
articles/chapter 0/demo1/: CMakeLists.txt  main.cpp
articles/chapter 0/demo2/: CMakeLists.txt  main.cpp
articles/chapter 1/: code.7z  光线追踪——从入门到放弃(1)：光线追踪是个啥.md  光路图.jfif
articles/chapter 2/: code.7z  trans.txt  光线追踪——从入门到放弃(2)：画个球-zhi.md  光线追踪——从入门到放弃(2)：画个球.md  球与光线相交.ggb
articles/chapter 3/: 光线追踪——从入门到放弃(3)：自定义相机.md
code/ray_tracing/: CMakeLists.txt  main.cpp
code/ray_tracing/header/: core.h  ray_tracing.h  tools.h
code/ray_tracing/header/objects/: sphere.h
code/ray_tracing/src/: CMakeLists.txt
code/ray_tracing/src/core/: CMakeLists.txt  acceleration.cpp  base.cpp
code/ray_tracing/src/objects/: CMakeLists.txt  sphere.cpp
code/ray_tracing/src/tools/: CMakeLists.txt  tools.cpp
